--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,3 +6,4 @@
 @import url("layout/bouton.css");
 @import url("layout/menu.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,700&display=swap');
+@import url("layout/article.css");
