--- a/src/css/layout/menu.css
+++ b/src/css/layout/menu.css
@@ -35,15 +35,17 @@ On ajoute les propriétés "visibility: hidden" et "opacity: 0" pour masquer le 
   .menu-img {
     justify-content: flex-start;
   }
-  .menu-text {
-    justify-content: flex-end;
-  }
+
   
   .menu__link {
     color: var(--white);
     text-decoration: none;
   }
-  
+  .menu__list-div {
+    width: 100%; 
+    height: 40px; 
+    background: var(--gray-black);
+  }
   
   /* Mise en forme du bouton de menu "Hamburger" */
   .menu-btn {
