--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,3 +1,15 @@
 .footer {
     background-color: var(--orange);
+    color: var(--white);
+    padding-bottom: 2px;
+    padding-top: 2px;
+}
+.footer__mail {
+    color: var(--white);
+    text-decoration: none;
+}
+.footer__link {
+    color: var(--white);
+    text-decoration: none;
+    text-decoration: underline;
 }
