--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,15 +1,15 @@
+/* Importation font */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,700&display=swap');
-
+/* Importation normalize */
 @import url("normalize/normalize.css");
-
+/* Importation variable */
 @import url("variable/variable.css");
-
+/* Importation base */
 @import url("base/main.css");
 @import url("base/media.css");
-
+/* Importation layout */
 @import url("layout/header.css");
 @import url("layout/footer.css");
-@import url("layout/bouton.css");
 @import url("layout/menu.css");
 @import url("layout/article.css");
 @import url("layout/carousel.css");
