--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,3 +13,4 @@
 @import url("layout/menu.css");
 @import url("layout/article.css");
 @import url("layout/carousel.css");
+@import url("layout/contact.css");
