--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -1,6 +1,5 @@
 
 body {
-    background-color: var(--white);
     font-family: var(--font-roboto);
 }
 
@@ -9,16 +8,7 @@ body {
     color: var(--white);
 }
 
-.egal {
-    color: var(--jaune-fade);
-    text-align: center;
-    font-size: 34px;
-    background-color: var(--violet);
-    font-family: var(--font-alata);
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
-}
+
 .sqare {
     width: 100%; 
     height: 100%; 
@@ -32,6 +22,32 @@ body {
     padding-top: 6px;
     padding-bottom: 6px;
     border-radius: 8px;
+}
+.carre-gray {
+    
+    width: 100%; 
+    height: 100%; 
+    background: var(--gray-black); 
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 4px;
+    padding-right: 4px;
+    border-radius: 8px;
+}
+.no-deco  {
+    color: var(--white);
+    text-decoration: none;
+    
+}
+.italic {
+    font-style: italic;
+}
+blockquote {
+    margin: 0;
+}
+blockquote p {
+    font-style: italic;
+    font-weight: bold;
 }
 
 .color-white {
@@ -53,14 +69,8 @@ body {
     padding-left: var(--space2x);
     padding-right: var(--space2x);
 }
-.marge2 {
-    padding-left: var(--space15x);
-    padding-right: var(--space15x);
-}
-.marge3 {
-    padding-left: 40px;
-    padding-right: 40px;
-}
+
+
 /* permet d'annuler la mise en forme des bouton qu'applique le navigateur. */
 button {
     -webkit-appearance: none;
