--- a/src/css/layout/carousel.css
+++ b/src/css/layout/carousel.css
@@ -1,4 +1,31 @@
-.carousel {
+
+.images15{
+	width: 6600px;
+	height: 323px;
+	
+}
+
+.images15 img{
+	width: 220px;
+	height: 300px;
+}
+
+.image15{
+	position: absolute;
+	top:0;
+	left:0;
+	z-index: 0;
+}
+.carrousel{
+	width: 220px;
+	padding: 0px;
+	position: relative;
+	overflow: hidden;
     display: flex;
+    
+}
+.carrousel-flex {
+    display: flex;
+    gap: 5px;
     justify-content: space-evenly;
 }
