--- a/src/css/layout/carousel.css
+++ b/src/css/layout/carousel.css
@@ -30,3 +30,25 @@
     gap: 5px;
     justify-content: space-evenly;
 }
+
+.visionneuse {
+	width: 100%;
+	height: 200px;
+	position: relative;
+	overflow: hidden;
+}
+.texte13 {
+	position: relative;
+	text-align: center;
+	width: 100%;
+
+	color: black;
+	background-color: rgba(255, 255, 255, 0.55);
+	display: none;
+}	
+
+.image img{
+	
+	z-index: 0;
+	position: relative;
+}
